<resources>
    <string name="app_name">Udacity Android Nanodegree App</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_launcher"> My Nanodegree Apps!</string>

    <string name="title_spotify">Spotify Streamer</string>
    <string name="title_scores">Scores App</string>
    <string name="title_library">Library App</string>
    <string name="title_build_it">Build It Bigger</string>
    <string name="title_xyz">XYZ Reader</string>
    <string name="title_capstone">Capstone: My Own App</string>
</resources>
