<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@android:color/darker_gray"
    android:onClick="buttonClickedMakeToast">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_launcher"
        android:id="@+id/textView_launcher"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/abc_dialog_padding_material" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_spotify"
        android:id="@+id/button_spotify"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/abc_button_inset_vertical_material"
        android:textSize="@dimen/abc_text_size_menu_material"
        android:background="#F08C35"
        android:textColor="@android:color/black"
        android:clickable="true"
        android:onClick="buttonClickedMakeToast" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_scores"
        android:id="@+id/button_scores"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/abc_button_inset_vertical_material"
        android:textSize="@dimen/abc_text_size_menu_material"
        android:background="#F08C35"
        android:textColor="@android:color/black"
        android:clickable="true"
        android:onClick="buttonClickedMakeToast" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_library"
        android:id="@+id/button_library"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/abc_button_inset_vertical_material"
        android:textSize="@dimen/abc_text_size_menu_material"
        android:background="#F08C35"
        android:textColor="@android:color/black"
        android:clickable="true"
        android:onClick="buttonClickedMakeToast" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_build_it"
        android:id="@+id/button_build_it"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/abc_button_inset_vertical_material"
        android:textSize="@dimen/abc_text_size_menu_material"
        android:background="#F08C35"
        android:textColor="@android:color/black"
        android:clickable="true"
        android:onClick="buttonClickedMakeToast" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_xyz"
        android:id="@+id/button_xyz"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/abc_button_inset_vertical_material"
        android:textSize="@dimen/abc_text_size_menu_material"
        android:background="#F08C35"
        android:textColor="@android:color/black"
        android:clickable="true"
        android:onClick="buttonClickedMakeToast" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_capstone"
        android:id="@+id/button_capstone"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/holo_red_dark"
        android:textColor="@android:color/white"
        android:layout_margin="@dimen/abc_button_inset_vertical_material"
        android:textSize="@dimen/abc_text_size_menu_material"
        android:clickable="true"
        android:onClick="buttonClickedMakeToast" />

</LinearLayout>

